--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MY RESUME</title>
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" media="screen and (max-width:768px)" href="./css/mobile.css">
-    <link rel="stylesheet" media="screen and (min-width:769px) and (max-width:1100px)" href="./css/tablet.css">
+    <link rel="stylesheet" media="screen and (max-width:600px)" href="./css/mobile.css">
+    <link rel="stylesheet" media="screen and (min-width:601px) and (max-width:900px)" href="./css/tablet.css">
+    <link rel="stylesheet" media="screen and (min-width:901px) and (max-width:1200px)" href="./css/ipad.css">
 
 </head>
 <body>
